@@ -681,232 +681,6 @@ static void selinux2line(db_line *line)
 #endif
 }
 
-list* add_file_to_list(list* listp,char*filename,DB_ATTR_TYPE attr,int* addok)
-{
-  db_line* fil=NULL;
-  time_t cur_time;
-  struct AIDE_STAT_TYPE fs;
-  int sres=0;
-  
-  error(220, _("Adding %s to filelist\n"),filename);
-  
-  fil=(db_line*)malloc(sizeof(db_line));
-  fil->attr=attr|DB_FILENAME|DB_LINKNAME;
-  fil->filename=(char*)malloc(sizeof(char)*strlen(filename)+1);
-  strncpy(fil->filename,filename,strlen(filename));
-  fil->filename[strlen(filename)]='\0';
-  /* We want to use lstat here instead of stat since we want *
-   * symlinks stats not the file that it points to. */
-  sres=AIDE_LSTAT_FUNC(fil->filename,&fs);
-  if(sres==-1){
-    char* er=strerror(errno);
-    if (er==NULL) {
-      error(0,"lstat() failed for %s. strerror failed for %i\n",fil->filename,errno);
-    } else {
-      error(0,"lstat() failed for %s:%s\n",fil->filename,strerror(errno));
-    }
-    free(fil->filename);
-    free(fil);
-    *addok=RETFAIL;
-    return listp;
-  } 
-  if(!(fil->attr&DB_RDEV))
-    fs.st_rdev=0;
-  
-  cur_time=time(NULL);
-
-  if (cur_time==(time_t)-1) {
-    char* er=strerror(errno);
-    if (er==NULL) {
-      error(0,_("Can not get current time. strerror failed for %i\n"),errno);
-    } else {
-      error(0,_("Can not get current time with reason %s\n"),er);
-    }
-  } else {
-    
-    if(fs.st_atime>cur_time){
-      error(CLOCK_SKEW,_("%s atime in future\n"),fil->filename);
-    }
-    if(fs.st_mtime>cur_time){
-      error(CLOCK_SKEW,_("%s mtime in future\n"),fil->filename);
-    }
-    if(fs.st_ctime>cur_time){
-      error(CLOCK_SKEW,_("%s ctime in future\n"),fil->filename);
-    }
-  }
-  
-  fil->perm_o=fs.st_mode;
-  fil->size_o=fs.st_size;
-
-  if((S_ISLNK(fs.st_mode))){
-    char* lnktmp=NULL;
-    char* lnkbuf=NULL;
-    int len=0;
-    
-#ifdef WITH_ACL   
-    if(conf->no_acl_on_symlinks!=1) {
-      fil->attr&=(~DB_ACL);
-    }
-#endif
-    
-    if(conf->warn_dead_symlinks==1) {
-      struct AIDE_STAT_TYPE tmp_fs;
-      sres=AIDE_STAT_FUNC(fil->filename,&tmp_fs);
-      if (sres!=0) {
-	error(4,"Dead symlink detected at %s\n",fil->filename);
-      }
-      if(!(fil->attr&DB_RDEV))
-	fs.st_rdev=0;
-    }
-    
-    if(conf->symlinks_found==0){
-      int it=0;
-      DB_FIELD dbtmp;
-      DB_FIELD dbtmp2;
-      dbtmp=conf->db_out_order[1];
-      conf->db_out_order[1]=db_linkname;
-      for(it=2;it<conf->db_out_size;it++){
-	dbtmp2=conf->db_out_order[it];
-	conf->db_out_order[it]=dbtmp;
-	dbtmp=dbtmp2;
-      }
-      conf->db_out_order[conf->db_out_size++]=dbtmp;
-      conf->symlinks_found=1;
-    }
-
-    lnktmp=(char*)malloc(_POSIX_PATH_MAX+1);
-    if(lnktmp==NULL){
-      error(0,_("malloc failed in add_file_to_list()\n"));
-      abort();
-    }
- 
-    len=readlink(fil->filename,lnktmp,_POSIX_PATH_MAX+1);
-    if(len == -1){
-      error(0,"readlink failed in add_file_to_list(): %d,%s\n"
-	    ,errno,strerror(errno));
-      free(lnktmp);
-      free(fil->filename);
-      free(fil);
-      *addok=RETFAIL;
-      return listp;
-    }
-    lnkbuf=(char*)malloc(len+1);
-    if(lnkbuf==NULL){
-      error(0,_("malloc failed in add_file_to_list()\n"));
-      abort();
-    }
-
-    strncpy(lnkbuf,lnktmp,len);
-    lnkbuf[len]='\0';
-    fil->linkname=lnkbuf;
-    free(lnktmp);
-    fil->attr|=DB_LINKNAME;
-  }else {
-    fil->linkname=NULL;
-    /* Just remove linkname availability bit from this entry */
-    fil->attr&=(~DB_LINKNAME); 
-  }
-
-  
-  fil->inode=fs.st_ino;
-
-  if(DB_UID&fil->attr) {
-    fil->uid=fs.st_uid;
-  }else {
-    fil->uid=0;
-  }
-
-  if(DB_GID&fil->attr){
-    fil->gid=fs.st_gid;
-  }else{
-    fil->gid=0;
-  }
-
-  fil->perm=fs.st_mode;
-
-  if(DB_SIZE&fil->attr||DB_SIZEG&fil->attr){
-    fil->size=fs.st_size;
-  }else{
-    fil->size=0;
-  }
-  
-  if(DB_LNKCOUNT&fil->attr){
-    fil->nlink=fs.st_nlink;
-  }else {
-    fil->nlink=0;
-  }
-
-  if(DB_MTIME&fil->attr){
-    fil->mtime=fs.st_mtime;
-  }else{
-    fil->mtime=0;
-  }
-
-  if(DB_CTIME&fil->attr){
-    fil->ctime=fs.st_ctime;
-  }else{
-    fil->ctime=0;
-  }
-  
-  if(DB_ATIME&fil->attr){
-    fil->atime=fs.st_atime;
-  }else{
-    fil->atime=0;
-  }
-
-  if(DB_BCOUNT&fil->attr){
-    fil->bcount=fs.st_blocks;
-  } else {
-    fil->bcount=0;
-  }
-
-  
-  if(S_ISDIR(fs.st_mode)||S_ISCHR(fs.st_mode)
-     ||S_ISBLK(fs.st_mode)||S_ISFIFO(fs.st_mode)
-     ||S_ISLNK(fs.st_mode)||S_ISSOCK(fs.st_mode)){
-    
-    fil->attr&=(~DB_MD5)&(~DB_SHA1)&(~DB_SHA256)&(~DB_SHA512)&(~DB_RMD160)&(~DB_TIGER)&(~DB_CRC32)&(~DB_HAVAL);
-    
-    fil->md5=NULL;
-    fil->sha1=NULL;
-    fil->sha256=NULL;
-    fil->sha512=NULL;
-    fil->tiger=NULL;
-    fil->rmd160=NULL;
-    fil->haval=NULL;
-    fil->crc32=NULL;
-#ifdef WITH_MHASH
-
-    fil->attr&=(~DB_CRC32B)&(~DB_GOST)&(~DB_WHIRLPOOL);
-
-    fil->crc32b=NULL;
-    fil->gost=NULL;
-    fil->whirlpool=NULL;
-#endif
-  }else {
-    /* 1 if needs to be set
-     * 0 otherwise */
-    fil->md5=DB_MD5&fil->attr?(byte*)"":NULL;
-    fil->sha1=DB_SHA1&fil->attr?(byte*)"":NULL;
-    fil->tiger=DB_TIGER&fil->attr?(byte*)"":NULL;
-    fil->rmd160=DB_RMD160&fil->attr?(byte*)"":NULL;
-    fil->crc32=DB_CRC32&fil->attr?(byte*)"":NULL;
-    fil->haval=DB_HAVAL&fil->attr?(byte*)"":NULL;
-#ifdef WITH_MHASH
-    fil->crc32b=DB_CRC32B&fil->attr?(byte*)"":NULL;
-    fil->gost=DB_GOST&fil->attr?(byte*)"":NULL;
-    fil->whirlpool=DB_WHIRLPOOL&fil->attr?(byte*)"":NULL;
-#endif
-  }
-
-  xattrs2line(fil); /* NOTE ... this is a lie, code never gets here */
-  
-  listp=list_append(listp,(void*)fil);
-
-  *addok=RETOK;
-  return listp;
-}
-
 int check_list_for_match(list* rxrlist,char* text,DB_ATTR_TYPE* attr)
 {
   list* r=NULL;
@@ -986,152 +760,6 @@ int check_node_for_match(seltree*node,char*text,int retval,DB_ATTR_TYPE* attr)
   return retval;
 }
 
-list* traverse_tree(seltree* tree,list* file_lst,DB_ATTR_TYPE attr)
-{
-  list* r=NULL;
-  seltree* a=NULL;
-  DIR* dirh=NULL;
-  struct AIDE_DIRENT_TYPE* entp=NULL;
-  struct AIDE_DIRENT_TYPE** resp=NULL;
-  int rdres=0;
-  int addfile=0;
-  char* fullname=NULL;
-  int e=0;
-  DB_ATTR_TYPE matchattr=attr;
-#  ifndef HAVE_READDIR_R
-  long td=-1;
-#  endif
-  int addok=RETOK;
-
-  /* Root is special and it must be checked on it's own. */
-  if( tree->path[0]=='/' && tree->path[1]=='\0' ){
-    addfile=check_node_for_match(tree,"/",0,&matchattr);
-    if(addfile){
-      error(240,"%s match=%d\n",fullname, addfile);
-      file_lst=add_file_to_list(file_lst,"/",matchattr,&addok);
-    }
-  }
-
-  if(!(dirh=opendir(tree->path))){
-    error(3,"traverse_tree():%s: %s\n", strerror(errno),tree->path);
-    return file_lst;
-  }
-  
-#  ifdef HAVE_READDIR_R
-  resp=(struct AIDE_DIRENT_TYPE**)
-    malloc(sizeof(struct AIDE_DIRENT_TYPE)+_POSIX_PATH_MAX);
-  entp=(struct AIDE_DIRENT_TYPE*)
-    malloc(sizeof(struct AIDE_DIRENT_TYPE)+_POSIX_PATH_MAX);
-  
-  for(rdres=AIDE_READDIR_R_FUNC(dirh,entp,resp);
-      (rdres==0&&(*resp)!=NULL);
-      rdres=AIDE_READDIR_R_FUNC(dirh,entp,resp)){
-#  else
-#   ifdef HAVE_READDIR
-  for(entp=AIDE_READDIR_FUNC(dirh);
-      (entp!=NULL&&td!=telldir(dirh));
-      entp=AIDE_READDIR_FUNC(dirh)){
-    td=telldir(dirh);
-#   else
-#    error AIDE needs readdir or readdir_r
-#   endif
-#  endif
-
-    if(strncmp(entp->d_name,".",1)==0){
-      if(strncmp(entp->d_name,".",strlen(entp->d_name))==0)
-	continue;
-      if(strncmp(entp->d_name,"..",strlen(entp->d_name))==0)
-	continue;
-    }
-    /* Construct fully qualified pathname for the file in question */
-    fullname=(char*)
-      malloc(sizeof(char)*(strlen(entp->d_name)+strlen(tree->path)+2));
-    strncpy(fullname,tree->path,strlen(tree->path));
-    if(strncmp(tree->path,"/",strlen(tree->path))!=0){
-      strncpy(fullname+strlen(tree->path),"/",1);
-      e=1;
-    }else {
-      e=0;
-    }
-    strncpy(fullname+strlen(tree->path)+e,entp->d_name,strlen(entp->d_name));
-    fullname[(strlen(tree->path)+e+strlen(entp->d_name))]='\0';
-    error(230,_("Checking %s for match\n"),fullname);
-    if(attr){ /* This dir and all its subs are added by default */
-      addfile=1;
-      
-      addfile=check_node_for_match(tree,fullname,addfile,&matchattr);
-      
-      if(addfile){
-        error(240,"%s match=%d\n",fullname, addfile); 
-
-	file_lst=add_file_to_list(file_lst,fullname,matchattr,&addok);
-	if( !(addfile&2) && addok!=RETFAIL){
-	  if(S_ISDIR(((db_line*)file_lst->header->tail->data)->perm_o)){
-	    a=get_seltree_node(tree,
-			       ((db_line*)file_lst->header->tail->data)
-			       ->filename);
-	    if(a==NULL){
-	      a=new_seltree_node(tree,
-				 ((db_line*)file_lst->header->tail->data)
-				 ->filename,0,NULL);
-	    }
-	    file_lst=traverse_tree(a,file_lst,attr);
-	  }
-	}
-      } else {
-	error(230,_("Entry %s does not match\n"),fullname);
-      }
-    } else{ /* This dir is not added by default */
-      addfile=0;
-      
-      addfile=check_node_for_match(tree,fullname,addfile,&matchattr);
-      
-      if(addfile){
-        error(240,"%s match=%d\n",fullname, addfile); 
-	file_lst=add_file_to_list(file_lst,fullname,matchattr,&addok);
-	if(addfile!=2 && addok!=RETFAIL){
-	  if(S_ISDIR(((db_line*)file_lst->header->tail->data)->perm_o)){
-	    a=get_seltree_node(tree,
-			       ((db_line*)file_lst->header->tail->data)
-			       ->filename);
-	    if(a==NULL){
-	      a=new_seltree_node(tree,
-				 ((db_line*)file_lst->header->tail->data)
-				 ->filename,0,NULL);
-	    }
-	    file_lst=traverse_tree(a,file_lst,matchattr); 
-	  }
-	}
-      } else {
-	error(230,_("Entry %s does not match\n"),fullname);
-      }
-      
-    }
-    free(fullname);
-  }
-
-  if(closedir(dirh)==-1){
-    error(0,"Closedir() failed for %s\n",tree->path);
-  };
-  
-#  ifdef HAVE_READDIR_R
-  free(resp);
-  free(entp);
-#  endif
-  
-  /* All childs are not necessarily checked yet */
-  if(tree->childs!=NULL){
-    for(r=tree->childs;r;r=r->next){
-      if(!(((seltree*)r->data)->checked)) {
-	file_lst=traverse_tree((seltree*)r->data,file_lst,attr);
-      }
-    }
-  }
-  tree->checked=1;
-  
-  return file_lst;
-}
-
 void print_tree(seltree* tree) {
   
   list* r;
@@ -1170,23 +798,6 @@ seltree* gen_tree(list* prxlist,list* nrxlist,list* erxlist)
   print_tree(tree);
 
   return tree;
-}
-
-list* gen_list(list* prxlist,list* nrxlist,list* erxlist)
-{
-  list* r=NULL;
-  seltree* tree=NULL;
-  
-  tree=gen_tree(prxlist,nrxlist,erxlist);
-  
-  if(tree==NULL){
-    return NULL;
-  }
-  
-  
-  r=traverse_tree(tree,NULL,0);
-  
-  return r;
 }
 
 /*
@@ -1689,7 +1300,7 @@ void hsymlnk(db_line* line) {
     */
     line->linkname=(char*)malloc(_POSIX_PATH_MAX+1);
     if(line->linkname==NULL){
-      error(0,_("malloc failed in add_file_to_list()\n"));
+      error(0,_("malloc failed in hsymlnk()\n"));
       abort();
     }
     
